<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".Admin_NewBookActivity"

    android:background="@drawable/abc_btn_default_mtrl_shape">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >



        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:minHeight="300dp"
            android:minWidth="250dp"
            android:weightSum="1"
            android:layout_weight="0.45">



            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/admin_book_header"
                android:id="@+id/userenroll_header"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.07" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/admin_book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_book_title"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <EditText
                android:id="@+id/admin_book_titletext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:singleLine="true">



            </EditText>


            <TextView
                android:id="@+id/admin_book_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_book_author"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <EditText
                android:id="@+id/admin_book_authortext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:singleLine="true"/>


            <TextView
                android:id="@+id/admin_book_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_book_publisher"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <EditText
                android:id="@+id/admin_book_pubtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/admin_book_accno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_book_acc_no"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/admin_book_accnotext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/admin_book_callno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_book_call_no"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <EditText
                android:id="@+id/admin_book_callnotext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/admin_book_isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_book_isbn"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <EditText
                android:id="@+id/admin_book_isbntext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/admin_book_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_book_status"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <EditText
                android:id="@+id/admin_book_statustext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/admin_book_item_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_book_item_type"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <EditText
                android:id="@+id/admin_book_itemtypetext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/admin_book_res_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_book_res_by"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <EditText
                android:id="@+id/admin_book_resbytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.32" />



            <Button
                android:id="@+id/add_book_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_book_submit"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
               />


            <Button
                android:id="@+id/admin_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_book_cancel"
                 />





        </LinearLayout>
    </ScrollView>
</LinearLayout>