<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:weightSum="1"
    android:theme="@style/AppTheme"
    android:background="@drawable/abc_ab_share_pack_mtrl_alpha"
    style="@style/Widget.AppCompat.Light.ActionButton">

    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/userenrollheader"
        android:id="@+id/userenroll_header"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07" />

    <LinearLayout

        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minHeight="300dp"
        android:minWidth="250dp"
        android:weightSum="1"
        android:layout_weight="0.45">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/enroll_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enroll_username"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/enroll_usernametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:singleLine="true">


            <requestFocus />
        </EditText>


        <TextView
            android:id="@+id/enroll_userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enroll_userid"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/enroll_useridtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:singleLine="true"/>


        <TextView
            android:id="@+id/enroll_userpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enroll_userpass"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/enroll_userpasstext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/enroll_userdepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enroll_userdepartment"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/departmentarray"
            android:entries="@array/Department_array"
            android:layout_weight="0.23" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/enroll_usercategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enroll_usercategory"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/category"
            android:entries="@array/UserCategory_array"
            android:layout_weight="0.23" />




        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.32" />


            <Button
                android:id="@+id/Enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ENROLL"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal" />


    </LinearLayout>


</LinearLayout>
