<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kartikexample.lnmlibrary.Admin_Purchase">

    <LinearLayout

        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minHeight="300dp"
        android:minWidth="250dp"
        android:weightSum="1"
        android:layout_weight="0.45">

        <TextView
            android:id="@+id/userenroll_header"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/admin_book_pur_header"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.23" />

        <TextView
            android:id="@+id/admin_book_pur_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_book_title"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/admin_book_pur_titletext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/admin_book_pur_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_book_author"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/admin_book_pur_authortext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/admin_book_pur_noc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_book_pur_noc"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/admin_book_pur_noctext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.32" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_weight="0.41">

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_book_submit"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />


            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_book_cancel"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/submit" />


        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
