<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:weightSum="1"
    android:theme="@style/AppTheme"
    android:background="@drawable/abc_btn_default_mtrl_shape">

    <TextView
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Ch_pass_header"
        android:id="@+id/respass_header"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07" />

    <LinearLayout

        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minHeight="300dp"
        android:minWidth="250dp"
        android:weightSum="1"
        android:layout_weight="0.59">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.23" />

        <TextView
            android:id="@+id/reqpass_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_pass"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/reqpass_currenttext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:inputType="textPassword"
            android:singleLine="true">


            <requestFocus />
        </EditText>


        <TextView
            android:id="@+id/reqpass_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pass"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"

            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/reqpass_newtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:singleLine="true"/>


        <TextView
            android:id="@+id/reqpass_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_pass"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/reqpass_confirmtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.32" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm"
            android:id="@+id/confirmbutton"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


</LinearLayout>
